--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="index.css" />
-		<script type="module" src="index.ts"></script>
+		<script type="module" src="ts/index.ts"></script>
 	</head>
 	<body>
 		<canvas></canvas>
